# childs-play

./: Cargo.toml  README.md  license.md
src/: camera.rs  debug.txt  drawing.rs  linear_algebra.rs  main.rs  meshes.rs
src/camera/: lightsource.rs
src/drawing/: colors.rs  controls.rs  render.rs  shapes.rs
src/linear_algebra/: clipping.rs  data.rs  matrices.rs  plane.rs  queue.rs  triangles.rs  vectors.rs
src/meshes/: cube.rs  initialize_mesh.rs
src/old/: main_new_new_bak.rs  main_old.rs  main_restructured.rs
