[package]
name = "childs_play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.23.0"
nalgebra = "0.32.1"
nannou = "0.18.1"
raqote = "0.8.1"

[patch.crates-io]
nannou = { path = '../nannou/nannou' }